tests/NormalTests/paczka1/small_fuzzy/46774493.err
Error in line 1: A14 S250 44,6
Error in line 6: ZxoRVP S250 52,60
Error in line 4: LVEAxhQE S250 32,6
Error in line 10: HLSCgvNUbd S250 80,7
